@@ -1,3 +1,8 @@
+2012-08-08  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* scripts/dewaterred.py (Block.writefld): convert the array to
+	floating point before writing it
+
 2012-03-05  William A Perkins  <d3g096@briareus.local>
 
 	* scripts/dewaterred.py: add --begin and --end options to limit
